[an] author info ana now as a function

--- a/src/evaluation.ipynb
+++ b/src/evaluation.ipynb
@@ -26,6 +26,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "from scipy.stats import pearsonr, spearmanrdd\n",
     "from sklearn.metrics import accuracy_score, f1_score\n",
     "from sklearn.metrics import ConfusionMatrixDisplay, confusion_matrix\n",
     "\n",
@@ -687,54 +688,64 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T23:45:03.609109Z",
-     "start_time": "2024-06-24T23:45:03.601582Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "from scipy.stats import pearsonr, spearmanr",
-   "id": "22da6f256bdc411d",
-   "outputs": [],
-   "execution_count": 410
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-06-24T23:50:00.695993Z",
-     "start_time": "2024-06-24T23:50:00.260083Z"
+     "end_time": "2024-06-24T23:59:02.238171Z",
+     "start_time": "2024-06-24T23:59:02.201981Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "reload(ut)\n",
-    "ainfo = ut.get_author_info_for_dir(model_35_res_dir)\n",
-    "au_matches = 0\n",
-    "century_matches = 0\n",
-    "century_diffs = []\n",
-    "for ke, va in ainfo.items():\n",
-    "  poem_id = re.search(r\"_(\\d+)_\", ke).group(1)\n",
-    "  assert poem_id is not None\n",
-    "  poem_id = int(poem_id)\n",
-    "  author_ref = md_df.loc[md_df['id'] == poem_id, 'author'].iat[0]\n",
-    "  century_ref = md_df.loc[md_df['id'] == poem_id, 'centuryBirth'].iat[0]\n",
-    "  au_match = 1 if va[0] == author_ref else 0\n",
-    "  century_match = 1 if va[1] == century_ref else 0\n",
-    "  au_matches += au_match\n",
-    "  century_matches += century_match\n",
-    "  century_diff = abs(va[1] - century_ref)\n",
-    "  century_diffs.append(century_diff)\n",
-    "  print(f\"{va[0]}\\t{author_ref}\\t{au_match}\\t{va[1]}\\t{century_ref}\\t{century_match}\\t{century_diff}\")\n",
-    "print(f\"Total author matches: {au_matches} ({100*(au_matches/len(ainfo))}%)\")\n",
-    "print(f\"Total century matches: {century_matches} ({100*(century_matches/len(ainfo))}%)\")\n",
-    "print(f\"Mean century difference: {np.mean(century_diffs)} ({np.std(century_diffs)})\")\n",
+    "def analyze_author_info(model_res_dir, md_df):\n",
+    "  \"\"\"\n",
+    "  Analyzes author information for a given model results directory.\n",
     "\n",
-    "centuries_sys = [va[1] for va in ainfo.values()]\n",
-    "centuries_ref = [md_df.loc[md_df['id'] == int(re.search(r\"_(\\d+)_\", ke).group(1)), 'centuryBirth'].iat[0] for ke in ainfo.keys()]\n",
+    "  Args:\n",
+    "    model_res_dir (str): The directory where the model results are stored.\n",
+    "    md_df (DataFrame): The metadata DataFrame.\n",
     "\n",
-    "print(\"Pearson r\", pearsonr(centuries_sys, centuries_ref))\n",
-    "print(\"Spearman r\", spearmanr(centuries_sys, centuries_ref))"
+    "  Returns:\n",
+    "    None\n",
+    "  \"\"\"\n",
+    "  ainfo = ut.get_author_info_for_dir(model_res_dir)\n",
+    "  au_matches = 0\n",
+    "  century_matches = 0\n",
+    "  century_diffs = []\n",
+    "  for ke, va in ainfo.items():\n",
+    "    poem_id = re.search(r\"_(\\d+)_\", ke).group(1)\n",
+    "    assert poem_id is not None\n",
+    "    poem_id = int(poem_id)\n",
+    "    author_ref = md_df.loc[md_df['id'] == poem_id, 'author'].iat[0]\n",
+    "    century_ref = md_df.loc[md_df['id'] == poem_id, 'centuryBirth'].iat[0]\n",
+    "    au_match = 1 if va[0] == author_ref else 0\n",
+    "    century_match = 1 if va[1] == century_ref else 0\n",
+    "    au_matches += au_match\n",
+    "    century_matches += century_match\n",
+    "    century_diff = abs(va[1] - century_ref)\n",
+    "    century_diffs.append(century_diff)\n",
+    "    print(f\"{va[0]}\\t{author_ref}\\t{au_match}\\t{va[1]}\\t{century_ref}\\t{century_match}\\t{century_diff}\")\n",
+    "  print(f\"Total author matches: {au_matches} ({100*(au_matches/len(ainfo))}%)\")\n",
+    "  print(f\"Total century matches: {century_matches} ({100*(century_matches/len(ainfo))}%)\")\n",
+    "  print(f\"Mean century difference: {np.mean(century_diffs)} ({np.std(century_diffs)})\")\n",
+    "\n",
+    "  centuries_sys = [va[1] for va in ainfo.values()]\n",
+    "  centuries_ref = [md_df.loc[md_df['id'] == int(re.search(r\"_(\\d+)_\", ke).group(1)), 'centuryBirth'].iat[0] for ke in ainfo.keys()]\n",
+    "\n",
+    "  print(\"Pearson r\", pearsonr(centuries_sys, centuries_ref))\n",
+    "  print(\"Spearman r\", spearmanr(centuries_sys, centuries_ref))"
    ],
-   "id": "4a771c071f5f7716",
+   "id": "66c2a98005536e50",
+   "outputs": [],
+   "execution_count": 419
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-24T23:59:02.826439Z",
+     "start_time": "2024-06-24T23:59:02.326666Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "analyze_author_info(model_35_res_dir, md_df)",
+   "id": "9c1d1af9495d76c5",
    "outputs": [
     {
      "name": "stdout",
@@ -848,46 +859,18 @@
      ]
     }
    ],
-   "execution_count": 415
+   "execution_count": 420
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T23:49:33.158751Z",
-     "start_time": "2024-06-24T23:49:32.697336Z"
+     "end_time": "2024-06-24T23:59:03.243582Z",
+     "start_time": "2024-06-24T23:59:02.833050Z"
     }
    },
    "cell_type": "code",
-   "source": [
-    "reload(ut)\n",
-    "ainfo = ut.get_author_info_for_dir(model_4o_res_dir)\n",
-    "au_matches = 0\n",
-    "century_matches = 0\n",
-    "century_diffs = []\n",
-    "for ke, va in ainfo.items():\n",
-    "  poem_id = re.search(r\"_(\\d+)_\", ke).group(1)\n",
-    "  assert poem_id is not None\n",
-    "  poem_id = int(poem_id)\n",
-    "  author_ref = md_df.loc[md_df['id'] == poem_id, 'author'].iat[0]\n",
-    "  century_ref = md_df.loc[md_df['id'] == poem_id, 'centuryBirth'].iat[0]\n",
-    "  au_match = 1 if va[0] == author_ref else 0\n",
-    "  century_match = 1 if va[1] == century_ref else 0\n",
-    "  au_matches += au_match\n",
-    "  century_matches += century_match\n",
-    "  century_diff = abs(va[1] - century_ref)\n",
-    "  century_diffs.append(century_diff)\n",
-    "  print(f\"{va[0]}\\t{author_ref}\\t{au_match}\\t{va[1]}\\t{century_ref}\\t{century_match}\\t{century_diff}\")\n",
-    "print(f\"Total author matches: {au_matches} ({100*(au_matches/len(ainfo))}%)\")\n",
-    "print(f\"Total century matches: {century_matches} ({100*(century_matches/len(ainfo))}%)\")\n",
-    "print(f\"Mean century difference: {np.mean(century_diffs)} ({np.std(century_diffs)})\")\n",
-    "\n",
-    "centuries_sys = [va[1] for va in ainfo.values()]\n",
-    "centuries_ref = [md_df.loc[md_df['id'] == int(re.search(r\"_(\\d+)_\", ke).group(1)), 'centuryBirth'].iat[0] for ke in ainfo.keys()]\n",
-    "\n",
-    "print(\"Pearson r\", pearsonr(centuries_sys, centuries_ref))\n",
-    "print(\"Spearman r\", spearmanr(centuries_sys, centuries_ref))"
-   ],
-   "id": "661f5024d5f462b9",
+   "source": "analyze_author_info(model_4o_res_dir, md_df)",
+   "id": "3e2a0faa6eb215bc",
    "outputs": [
     {
      "name": "stdout",
@@ -1001,7 +984,7 @@
      ]
     }
    ],
-   "execution_count": 414
+   "execution_count": 421
   }
  ],
  "metadata": {
