--- a/src/evaluation-4o-mini.ipynb
+++ b/src/evaluation-4o-mini.ipynb
@@ -267,10 +267,10 @@
      "evalue": "name 'res_4o' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[8], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mlen\u001b[39m(res_4o[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msys_res\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'res_4o' is not defined"
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[8], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[38;5;28mlen\u001B[39m(res_4o[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124msys_res\u001B[39m\u001B[38;5;124m\"\u001B[39m])\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'res_4o' is not defined"
      ]
     }
    ],
@@ -659,6 +659,12 @@
    ]
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "**GPT-41**",
+   "id": "6face1448155aebd"
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "id": "4d9910a0-1624-46fb-9a19-e7d62afd6ec5",
@@ -998,6 +1004,12 @@
    "source": [
     "analyze_author_info(model_4o_res_dir, md_df)"
    ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "**GPT-41**",
+   "id": "96eeb4fa14ccad9"
   },
   {
    "cell_type": "code",
